--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-toast-message": "^2.1.8",
+    "react-native-vector-icons": "^10.0.2",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
