--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-vector-icons": "^10.0.2",
     "react-native-webview": "^13.6.3",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
