--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@stripe/stripe-react-native": "^0.35.0",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-splash-screen": "~0.20.5",
