--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -32,7 +33,7 @@
     "react-native-webview": "^13.6.3",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "expo-font": "~11.4.0"
+    "stripe": "^14.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
